--- a/Debian.html
+++ b/Debian.html
@@ -39,17 +39,25 @@
                     <a href="DNS.html">»</a>
                 </div>
             </div>
+
+            <div class="center2">
+                <div class="pagination">
+                    <a href="Debian.html" class="active">DESKRIBAPENA</a>
+                    <a href="Debian2.html">MAKINA BIRTUALA SORTU</a>
+                </div>
+            </div>
+
             <!-- Artikuluak -->
             <div class="articulos">
                 <div class="articulo1">
                     <h1>DEBIAN</h1>
-                    <h3>ZER DA, DEBIAN GNU/LINUX?</h3>
-                        <p>GNU / Linuxen distribuzioetako sistema eragile bat da, ezagunenetarikoa, egonkorrenetakoa eta zaharrenetarikoa,
+                    <h3>ZER DA?</h3>
+                        <p>&nbsp&nbspGNU / Linuxen distribuzioetako sistema eragile bat da, ezagunenetarikoa, egonkorrenetakoa eta zaharrenetarikoa,
                             gainera, software libre batean dago oinarrituta. Ubuntu bezalako distribuzio ezagunak sistema eragile honetan 
                             oinarritu zen etaedozein lekutan erabili daiteke, bai ordenagailuan, etxean zerbitzari batean, bulegoan,  
                             eta fabrikatzailean baita ere.</p>
                         <h3>NOLA FUNTZIONATZEN DU?</h3>
-                        <img src="Media/Fotis/talde3 - Proxmox Virtual Environment - Google Chrome 20_10_2020 12_39_22.png" width="60%">
+                        <img src="Media/Fotis/talde3 - Proxmox Virtual Environment - Google Chrome 20_10_2020 12_39_22.png" width="60%"><br>
                         <img src="Media/Fotis/talde3 - Proxmox Virtual Environment - Google Chrome 20_10_2020 12_57_34.png" width="60%">
                         <h3>NOLA DESKARGATU DEZAKET?</h3>
                         <p>Prestatzen ari garen zerbitzaria proxmoxen bidez desplegatuko dugunez, Debianen oinarritutako VM bat sortzeko pausuak azalduko dizuegu:</p>
