--- a/SSH.html
+++ b/SSH.html
@@ -49,11 +49,14 @@
                             (informazioa enkriptatuta doa).</p>
                         <h3>NOLA EGINGO DUGU</h3>
                         <p>PSSH instalatu ahal izateko hurrengo pausuak jarraitu beharko ditugu:</p>
-                            <p>&nbsp&nbsp 1. Terminal grafikoa zabalduko dugu eta root bezala logeatuko gara eta terminalean hurrengoa idatziko dugu:</p>          
-                            <img src="Media/SSH/SSH2.png" width="30%">
-                            <p>&nbsp&nbsp 2. Root-a SSH erabiliz logeatzeko baimena emango diogu:</p>          
-                            <img src="Media/SSH/SSH1.png" width="30%">        
+                            <ol id="pausuak">
+                                <li>Terminal grafikoa zabalduko dugu eta root bezala logeatuko gara eta terminalean hurrengoa idatziko dugu:</li>
+                                <br><img src="Media/SSH/SSH1.png" id="argazkiaPausoka">
+                                <li>Root-a SSH erabiliz logeatzeko baimena emango diogu:</li>
+                                <img src="Media/SSH/SSH2.png"> 
+                                <br><br><br><img src="Media/SSH/SSH3.png" id="argazkiaPausoka">  
 
+                            </ol>       
                     </div>
             </div>
         </div>
