--- a/FreeNas4.html
+++ b/FreeNas4.html
@@ -31,7 +31,7 @@
             <div class="center">
                 <div class="pagination">
                     <a href="#">«</a>
-                    <a href="FreeNas2.html" class="active">Free Nas</a>
+                    <a href="FreeNas2.html" class="active">FreeNas</a>
                     <a href="Debian.html">Debian</a>
                     <a href="DNS.html">DNS</a>
                     <a href="SSH.html">SSH</a>
@@ -44,31 +44,34 @@
                 <a href="FreeNas2.html">HARDWARE BALDINTZAK</a>
                 <a href="FreeNas3.html">INSTALAZIOA</a>
                 <a href="FreeNas4.html" class="active">INST. PROXMOX</a>
+                <a href="Freenas5.html">SEGURTASUN KOPIAK</a>
             </div>
             </div>
             <!-- Artikuluak -->
             <div class="articulos">
                 <div class="articulo1">
-                    <h1>FREE NAS</h1>
+                    <h1>FREENAS</h1>
                         <h3>INSTALAZIOA PROXMOXEAN</h3>
-                        <p>1. &nbsp ISO-a behin deskargatu ostean, “upload” botoia sakatuko dugu eta ISO-a aurkeratuko dugu. ADI! Prozesu hau minutu batzuk hartu ditzake.</p>
-                        <p>2. &nbsp Kargatzen denean, MV bat sortuko dugu ISO horrekin.</p>
-                        <p>3. &nbsp BIOS-era sartu, eta sistema boot-device-a FreeNAS-ekoa aukeratu egingo dugu.</p>
-                        <p>4. &nbsp Sistema berrabiarazi.</p>
-                        <p>5. &nbsp FreeNAS-eko instalazio menua pantailan agerraraztean lehenengo aukera (1) aukeratuko dugu instalazioa hasteko.</p>
-                        <p>6. &nbsp Kontsolako ‘Setup menu’-a kargatzen zaigunean, Install/Upgrade aukeratu.</p>
-                        <p>7. &nbsp urrengo menuan FreeNAS erabiltzeko ze drive erabiliko den aukeratzeko eskatuko digute. Hemen boot device-a aukeratuko dugu, <b>kontuz, ez “storage disk”-a.</b> Orokorrean boot device-a storagekoa baino tamaina txikiagoa izango du. Nabigatzeko Aukeratzeko espazio barra sakatu. Ondoren OK sakatu.</p>
-                        <p>8. &nbsp Ondorengo pantailan, “Yes” sakatu instalazioarekin jarraitu ahal izateko.</p>
-                        <p>9. &nbsp Jarraian FreeNAS-era sartzeko erabiliko dugun pasahitza sartzeko eskatuko digute.</p>
-                        <p>10. &nbsp FreeNAS Boot Mode menu pantailarekin topatzen garenean Boot via BIOS aukeratuko dugu (orokorrean ‘motherboard’ guztiekin funtzionatzen baitu eta Hardware zaharragoarekin be).</p>
-                        <p>11. &nbsp Gure instalazioa hasiko da, eta minutu gutxi batzuk beharko ditu hau bukatzeko.</p>
-                        <p>12. &nbsp OK sakatu sistema berrabiarazteko eta gero instalazioa egiteko erabili dugun diska edo USB-a kenduko dugu. Adi, sistemak bi aldiz galdetu egingo dizu diska edo USB-a kendu izan duzun edo ez.</p>
-                        <p>13. &nbsp Sistema berrabiaraziko da Boot device-tik.</p>
-                        <p>14. &nbsp FreeNAS kargatzen den lehen aldia denez, mezuak agertuko dira pantaila osoan zehar kargatzen den bitartean.</p>
-                        <p>15. &nbsp Amaitzen denean Console Setup-arekin  topatuko gara IP helbide batekin batera (azken hau 0.0.0.0. baldin bada, interneteko kablea konektatuta dagoela eta DHPC zerbitzari bat duela ziurtatu).</p>
-                        <p>16. &nbsp Orain beste ordenagailu batean web-arakatzailearen bilatzailean IP helbide hori bilatuko dugu, eta jarraian FreeNAS-eko login menuarekin topatu beharko ginen. “root” erabiltzeailearekin logueatu goiko pausu batean sartu duzun pasahitzarekin.</p>
-                        <p>17. &nbsp LISTO! FreesNAS instalatu berri duzu.</p>
-                        <img src="Media/Fotis/Prxm_1.png" width="60%">
+                            <ol id="pausuak">
+                                <li>&nbsp ISO-a behin deskargatu ostean, “upload” botoia sakatuko dugu eta ISO-a aurkeratuko dugu. ADI! Prozesu hau minutu batzuk hartu ditzake.</li>
+                                <li>&nbsp Kargatzen denean, MV bat sortuko dugu ISO horrekin.</li>
+                                <li>&nbsp BIOS-era sartu, eta sistema boot-device-a FreeNAS-ekoa aukeratu egingo dugu.</li>
+                                <li>&nbsp Sistema berrabiarazi.</li>
+                                <li>&nbsp FreeNAS-eko instalazio menua pantailan agerraraztean lehenengo aukera (1) aukeratuko dugu instalazioa hasteko.</li>
+                                <li>&nbsp Kontsolako ‘Setup menu’-a kargatzen zaigunean, Install/Upgrade aukeratu.</li>
+                                <li>&nbsp urrengo menuan FreeNAS erabiltzeko ze drive erabiliko den aukeratzeko eskatuko digute. Hemen boot device-a aukeratuko dugu, <b>kontuz, ez “storage disk”-a.</b> Orokorrean boot device-a storagekoa baino tamaina txikiagoa izango du. Nabigatzeko Aukeratzeko espazio barra sakatu. Ondoren OK sakatu.</li>
+                                <li>&nbsp Ondorengo pantailan, “Yes” sakatu instalazioarekin jarraitu ahal izateko.</li>
+                                <li>&nbsp Jarraian FreeNAS-era sartzeko erabiliko dugun pasahitza sartzeko eskatuko digute.</li>
+                                <li>&nbsp FreeNAS Boot Mode menu pantailarekin topatzen garenean Boot via BIOS aukeratuko dugu (orokorrean ‘motherboard’ guztiekin funtzionatzen baitu eta Hardware zaharragoarekin be).</li>
+                                <li>&nbsp Gure instalazioa hasiko da, eta minutu gutxi batzuk beharko ditu hau bukatzeko.</li>
+                                <li>&nbsp OK sakatu sistema berrabiarazteko eta gero instalazioa egiteko erabili dugun diska edo USB-a kenduko dugu. Adi, sistemak bi aldiz galdetu egingo dizu diska edo USB-a kendu izan duzun edo ez.</li>
+                                <li>&nbsp Sistema berrabiaraziko da Boot device-tik.</li>
+                                <li>&nbsp FreeNAS kargatzen den lehen aldia denez, mezuak agertuko dira pantaila osoan zehar kargatzen den bitartean.</li>
+                                <li>&nbsp Amaitzen denean Console Setup-arekin  topatuko gara IP helbide batekin batera (azken hau 0.0.0.0. baldin bada, interneteko kablea konektatuta dagoela eta DHPC zerbitzari bat duela ziurtatu).</li>
+                                <li>&nbsp Orain beste ordenagailu batean web-arakatzailearen bilatzailean IP helbide hori bilatuko dugu, eta jarraian FreeNAS-eko login menuarekin topatu beharko ginen. “root” erabiltzeailearekin logueatu goiko pausu batean sartu duzun pasahitzarekin.</li>
+                                <li>&nbsp LISTO! FreesNAS instalatu berri duzu.</li>
+                            </ol>
+                        <img src="Media/Fotis/Prxm_1.png" width="70%">
                 </div>
             </div>
         </div>
